--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -252,43 +252,49 @@
     <string name="pref_title_icon_highlights">Highlights color</string>
     <string name="pref_summary_icon_highlights">Set the color for icon selections</string>
     
-    <string name="pref_title_import_export">Import/export</string>
+    <string name="pref_title_import_export">Backup and restore</string>
     <string name="pref_title_xml">ADW settings</string>
-    <string name="pref_title_xml_import">Import settings from XML</string>
-    <string name="pref_summary_xml_import">Import from /sdcard/adw_settings.xml</string>
-    <string name="pref_title_xml_export">Export settings to XML</string>
-    <string name="pref_summary_xml_export">Export to /sdcard/adw_settings.xml</string>
+    <string name="pref_title_xml_import">Restore ADW settings</string>
+    <string name="pref_summary_xml_import">Restore from /sdcard/adw_settings.xml</string>
+    <string name="pref_title_xml_export">Backup ADW settings</string>
+    <string name="pref_summary_xml_export">Backup to /sdcard/adw_settings.xml</string>
     
     <string name="pref_title_db">Desktop configuration</string>
-    <string name="pref_title_db_import">Import desktop configuration</string>
-    <string name="pref_summary_db_import">Import from /sdcard/adw_launcher.db</string>
-    <string name="pref_title_db_export">Export desktop configuration</string>
-    <string name="pref_summary_db_export">Export to /sdcard/adw_launcher.db</string>
-    
-    <!-- XML Import/Export strings -->
-    <string name="xml_file_not_found">XML file not found!</string>
-    <string name="xml_io_exception">Error reading file!</string>
-    <string name="xml_parse_error">Error parsing XML!</string>
-    <string name="xml_import_success">XML import successful!</string>    
-    <string name="xml_write_error">Error writing XML!</string>
-    <string name="xml_export_success">XML export successful!</string>    
-    <string name="xml_sdcard_unmounted">SD card not mounted!</string>
-    
-    <!-- Config Import/Export strings -->
-    <string name="dbfile_write_error">Error exporting configuration!</string>
-    <string name="dbfile_export_success">Configuration exported successfully!</string>
-    <string name="dbfile_not_found">Configuration file not found!</string>
-    <string name="dbfile_not_readable">Configuration file exists, but is not readable!</string>
-    <string name="dbfile_import_error">Error exporting configuration!</string>
-    <string name="dbfile_import_success">Configuration imported successfully!</string>
+    <string name="pref_title_db_import">Restore desktop configuration</string>
+    <string name="pref_summary_db_import">Restore from /sdcard/adw_launcher.db</string>
+    <string name="pref_title_db_export">Backup desktop configuration</string>
+    <string name="pref_summary_db_export">Backup to /sdcard/adw_launcher.db</string>
     
     <string name="title_dialog_xml">ADW Launcher Settings</string>
-    <string name="message_dialog_import">Import settings from XML? ADW.Launcher will be restarted.</string>
-    <string name="message_dialog_export">Export settings to XML? Any existing file will be overwritten.</string>
+    <string name="import_export_sdcard_unmounted">SD card not mounted!</string>
     
-    <string name="message_dialog_import_config">Import desktop configuration? ADW.Launcher will be restarted.</string>
-    <string name="message_dialog_export_config">Export desktop configuration? Any existing file will be overwritten.</string>
-
+    <!-- XML Import/Export strings -->
+    <string name="message_dialog_export">Backup ADW settings? Any existing file will be overwritten.</string>
+    <string name="xml_export_dialog">Backing up ADW settings...</string>
+    <string name="xml_export_success">ADW settings backed up successfully!</string>
+    <string name="xml_export_error">Error backing up ADW settings!</string>    
+    
+    <string name="message_dialog_import">Restore ADW settings? ADW.Launcher will be restarted.</string>
+    <string name="xml_import_dialog">Restoring ADW settings...</string>  
+    <string name="xml_file_not_found">Settings backup file not found!</string>
+    <string name="xml_not_readable">Settings backup file exists, but is not readable!</string>
+    <string name="xml_import_success">ADW settings restored successfully!</string>
+    <string name="xml_import_error">Error restoring ADW settings!</string>
+    
+    <!-- Config Import/Export strings -->
+    <string name="message_dialog_export_config">Backup desktop configuration? Any existing file will be overwritten.</string>
+    <string name="dbfile_export_dialog">Backing up desktop configuration...</string>
+    <string name="dbfile_export_success">Configuration backed up successfully!</string>
+    <string name="dbfile_export_error">Error backing up configuration!</string>
+    
+    <string name="message_dialog_import_config">Restore desktop configuration? ADW.Launcher will be restarted.</string>
+    <string name="dbfile_import_dialog">Restoring desktop configuration...</string>
+    <string name="dbfile_not_found">Configuration file not found!</string>
+    <string name="dbfile_not_readable">Configuration file exists, but is not readable!</string>
+    <string name="dbfile_import_success">Configuration restored successfully!</string>
+    <string name="dbfile_import_error">Error restoring configuration!</string>
+    
+    <!-- Color Picker -->
     <string name="pref_dialog_title_color_picker">Pick a color.</string>
     <string name="pref_dialog_message_color_picker">Tap on center color to confirm.\nPress back to cancel.</string>
     <string name="pref_dialog_color_picker_alpha">alpha</string>
